fixed spacing

--- a/src/components/card/Card.less
+++ b/src/components/card/Card.less
@@ -1,3 +1,3 @@
 .dashboard-card {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
